--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,15 @@ markers =
     negative: for negative tests
     old: unused tests
     triangle_area: for triangle_area feature
+
+
+log_cli=true
+log_level=INFO
+log_format = PYTEST_INI_LOGS %(asctime)s %(levelname)s %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
+
+
+log_file=pytest_logs.log
+log_file_level=INFO
+log_file_format= PYTEST FILES %(asctime)s %(levelname)s %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
