--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,8 @@ markers =
     negative: for negative tests
     old: unused tests
     triangle_area: for triangle_area feature
+    swapi: for swapi resource
+    gorest: for gorest resource
 
 
 log_cli=true
