--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+curlify==2.2.1
 exceptiongroup==1.2.2
 Faker==33.1.0
 Flask==3.1.0
@@ -11,9 +12,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 packaging==24.2
+pillow==11.0.0
 pluggy==1.5.0
+psycopg2-binary==2.9.10
 pytest==8.3.4
 python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
 six==1.17.0
 tomli==2.1.0
