--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,8 @@ markers =
     triangle_area: for triangle_area feature
     swapi: for swapi resource
     gorest: for gorest resource
+    local_server: for local server
+    smoke: smoke tests
 
 
 log_cli=true
