--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+configobj==5.0.9
 curlify==2.2.1
+dynaconf==3.2.7
 exceptiongroup==1.2.2
 Faker==33.1.0
 Flask==3.1.0
+greenlet==3.1.1
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -20,6 +23,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
 six==1.17.0
+SQLAlchemy==2.0.37
 tomli==2.1.0
 typing_extensions==4.12.2
 urllib3==2.2.3
