--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+marshmallow==3.26.0
 packaging==24.2
 pillow==11.0.0
 pluggy==1.5.0
