--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,18 @@
 [default]
 DATABASE_URL=unknown
 base_user_name=Den
-
+sqlite_path=local_server/ololo.db
 
 [dev]
 DATABASE_URL=sqlite:////home/den/hillel/hillel_2510/sqlite.db
 API_TIMEOUT=5000
+delete_logs_after_tests=0
 
 
 [prod]
 DATABASE_URL=postgresql://den:den@localhost:5432/new_db
 API_TIMEOUT=3000
+delete_logs_after_tests=1
 
 [extra]
 DATABASE_URL=postgresql://den:den@localhost:5432/new_db
