--- a/settings.ini
+++ b/settings.ini
@@ -2,6 +2,7 @@
 DATABASE_URL=unknown
 base_user_name=Den
 sqlite_path=local_server/ololo.db
+sauserdemo_url=https://www.saucedemo.com/
 
 [dev]
 DATABASE_URL=sqlite:////home/den/hillel/hillel_2510/sqlite.db
