--- a/settings.ini
+++ b/settings.ini
@@ -3,6 +3,7 @@ DATABASE_URL=unknown
 base_user_name=Den
 sqlite_path=local_server/ololo.db
 sauserdemo_url=https://www.saucedemo.com/
+sauserdemo_number_products_on_a_page=6
 
 [dev]
 DATABASE_URL=sqlite:////home/den/hillel/hillel_2510/sqlite.db
