--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+assertpy==1.1
+attrs==25.1.0
 blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+chromedriver-autoinstaller==0.6.4
+chromedriver-binary-auto==0.3.1
 click==8.1.7
 configobj==5.0.9
 curlify==2.2.1
@@ -8,24 +12,38 @@ dynaconf==3.2.7
 exceptiongroup==1.2.2
 Faker==33.1.0
 Flask==3.1.0
+Flask-JWT-Extended==4.7.1
 greenlet==3.1.1
+h11==0.14.0
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 marshmallow==3.26.0
+outcome==1.3.0.post0
 packaging==24.2
 pillow==11.0.0
 pluggy==1.5.0
 psycopg2-binary==2.9.10
+PyJWT==2.10.1
+PySocks==1.7.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+selenium==4.28.1
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.37
 tomli==2.1.0
+trio==0.28.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 Werkzeug==3.1.3
+wsproto==1.2.0
