--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
 assertpy==1.1
 attrs==25.1.0
 blinker==1.9.0
@@ -29,6 +31,8 @@ psycopg2-binary==2.9.10
 PyJWT==2.10.1
 PySocks==1.7.1
 pytest==8.3.4
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
